<?xml version="1.0"?>
<package>
  <name>armor_find</name>
  <version>0.0.1</version>
  <description>The armor_find package</description>
  <maintainer email="todo@dji.com">d</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>message_generation</buildtool_depend>
  <build_depend>roscpp</build_depend>  
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
